# boxfarm

./: .gitignore  README.md
gui/: 2019-04-29 115400.csv  2019-04-29 170600.csv  README.md  hello.py  package-lock.json  package.json  settings.json  sockets.js  webserver (copy).js  webserver.js
gui/assets/: Encode_Sans_Semi_Expanded.css  Space_Mono.css
gui/css/bootstrap-4.2.1/: bootstrap.min.css
gui/docs/: AlertModals.html  BoxAnalytics.html  BoxTasks.html  Button.html  CircularProgressAnimation.html  ConfirmModals.html  InputTimeDropdown.html  Settings.html  Time.html  app_logic.js.html  data_types.js.html  index.html  public_app_logic.js.html  public_data_types.js.html  public_ui_logic.js.html  ui_logic.js.html  webserver.js.html
gui/public/: app_logic.js  data.json  data_types.js  index.html  plotting.js  progress.js  settings.html  style.css  ui_logic.js
gui/views/templates/: imaging.ejs
onboard/: imager.py  imaging.py
robotics/: alpha-demo.py  banquet.py  calibrate.gcode  helper.py  imaging-demo.py  notes  okay.py  testbed.py
source/: CMakeLists.txt  agent_boxlisten.cpp  agent_boxtalk.cpp  agent_data.cpp  agent_temp.cpp  binding.gyp  package-lock.json  package.json  test.js
statics/: pictures.py  pretty.py  sample.json  statics.ino  statics.py  watcher.py
statics/data/: sample.json
